--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                         alt="perfume-img">
                 </div>
                 <div class="col-3">
-                    <div class="card card-perfume">
-                        <div class="card-body">
+                    <div class="card card-perfume img-fluid">
+                        <div class="card-body ">
                             <p class="card-text collection-text">OUR PREMIUM COLLECTION OF PERFUMES IN ARABIC AND FRENCH
                                 TONE
                                 <a class="btn btn-outline-dark btn-1" href="#">VIEW COLLECTION...</a>
