--- a/index.html
+++ b/index.html
@@ -175,15 +175,17 @@
     </section>
 
     <section class="container arabian-sec">
-        <div class="row text-center arabian-perfumes">
-            <h1 class="text-arabic-brand "><b><i> OUR ARABIC COLLECTION</i></b></h1>
+        <h1 class="text-arabic-brand "><b><i> OUR ARABIC COLLECTION</i></b></h1>
 
-            <div class="col-lg-3">
+        <div class="d-lg-flex text-center arabian-perfumes">
+
+            <div class="align-self-center">
                 <div class="mt-4">
                     <div class="product-card product-card-1">
                         <div class="card">
                             <div class="card-body card-product-body">
-                                <h5 class="card-title title-salamah">DEHNUL OUD SALAMAH <span class="arabic-title"> دهن
+                                <h5 class="card-title title-salamah">DEHNUL OUD SALAMAH <br> <span class="arabic-title">
+                                        دهن
                                         العود سلامة
                                     </span> <br> </h5>
                                 <h1 class="card-text qty-text mt-3">100 ML <br> <span class="arabic-qty"> ١٠٠ مل </span>
@@ -197,7 +199,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-3">
+            <div class="">
                 <div class="mt-4">
                     <div class="product-card">
                         <div class="card">
@@ -217,7 +219,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-3">
+            <div class="">
                 <div class="mt-4">
                     <div class="product-card">
                         <div class="card">
@@ -239,7 +241,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-3">
+            <div class="">
                 <div class="mt-4">
                     <div class="product-card">
                         <div class="card">
