--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="owl-carousel owl-theme">
                 <div class="item">
                     <!-- <img src="images/banner-img.jpg" class="image-test " alt="" srcset=""-->
-                    <div class="bg-img">
+                    <div class="bg-img img-fluid">
                         <h1 class="perfumes-slogan"> <i>“Taste and love are not the servants of the will.
                                 <br> <span class="perfumes-slogan-2"> Love is
                                     and
@@ -68,8 +68,9 @@
                         </h1>
                     </div>
                 </div>
+
                 <div class="item">
-                    <div class="bg-img-2">
+                    <div class="bg-img-2 img-fluid">
                         <h1 class="perfumes-slogan-two"> <i> <span class="perfumes-slogan-2-1"></span>"Perfume is the
                                 art that makes memory speak,</span>
                                 <br> an Arabian tale
@@ -82,7 +83,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <div class="bg-img-3">
+                    <div class="bg-img-3 img-fluid">
                         <h1 class="perfumes-slogan-three text-center"> <i> "Unleash your senses with the exotic allure
                                 of
                                 Arabian attar & perfumes. <br> <br> From the tantalizing musk to the mesmerizing oud
@@ -177,25 +178,24 @@
     <section class="container arabian-sec">
         <h1 class="text-arabic-brand "><b><i> OUR ARABIC COLLECTION</i></b></h1>
 
-        <div class="d-lg-flex text-center arabian-perfumes">
+        <!-- <div class="d-lg-flex justify-content-xxl-between text-center arabian-perfumes">
 
-            <div class="align-self-center">
-                <div class="mt-4">
-                    <div class="product-card product-card-1">
-                        <div class="card">
-                            <div class="card-body card-product-body">
-                                <h5 class="card-title title-salamah">DEHNUL OUD SALAMAH <br> <span class="arabic-title">
-                                        دهن
-                                        العود سلامة
-                                    </span> <br> </h5>
-                                <h1 class="card-text qty-text mt-3">100 ML <br> <span class="arabic-qty"> ١٠٠ مل </span>
-                                </h1>
-                                <h1 class="card-text-2 mt-3">₹ 5000/- <br> <span class="arabic-price"> ₹ ٥٠٠٠/- </span>
-                                </h1>
-                            </div>
+
+            <div class="mt-4 align-content-center">
+                <div class="product-card product-card-1">
+                    <div class="card">
+                        <div class="card-body card-product-body">
+                            <h5 class="card-title title-salamah">DEHNUL OUD SALAMAH <br> <span class="arabic-title">
+                                    دهن
+                                    العود سلامة
+                                </span> <br> </h5>
+                            <h1 class="card-text qty-text mt-3">100 ML <br> <span class="arabic-qty"> ١٠٠ مل </span>
+                            </h1>
+                            <h1 class="card-text-2 mt-3">₹ 5000/- <br> <span class="arabic-price"> ₹ ٥٠٠٠/- </span>
+                            </h1>
                         </div>
-                        <img class="card-img text-center" src="images/d,oud-salamat-100ml.jpg" alt="Product Image">
                     </div>
+                    <img class="card-img" src="images/d,oud-salamat-100ml.jpg" alt="Product Image">
                 </div>
             </div>
 
@@ -256,6 +256,65 @@
                             </div>
                         </div>
                         <img class="card-img text-center" src="images/shaikat-100ml.jpg" alt="Product Image">
+                    </div>
+                </div>
+            </div>
+        </div> -->
+
+        <div class="d-flex justify-content-center justify-content-xxl-between flex-wrap arabian-perfumes">
+
+            <div class="mt-4">
+                <div class="product-card product-card-1">
+                    <div class="card">
+                        <div class="card-body card-product-body text-center">
+                            <h5 class="card-title title-salamah">DEHNUL OUD SALAMAH <br> <span class="arabic-title">دهن
+                                    العود سلامة</span> <br> </h5>
+                            <h1 class="card-text qty-text mt-3">100 ML <br> <span class="arabic-qty">١٠٠ مل</span></h1>
+                            <h1 class="card-text-2 mt-3">₹ 5000/- <br> <span class="arabic-price">₹ ٥٠٠٠/-</span></h1>
+                        </div>
+                        <img class="card-img mx-auto" src="images/d,oud-salamat-100ml.jpg" alt="Product Image">
+                    </div>
+                </div>
+            </div>
+
+            <div class="mt-4">
+                <div class="product-card">
+                    <div class="card">
+                        <div class="card-body card-product-body text-center oud-kalakasi">
+                            <h5 class="card-title kalakasi-title">OUD KALAKASI <br> <span
+                                    class="arabic-title kalakasi-arabic">عود كلكاسي</span> <br> </h5>
+                            <h1 class="card-text qty-text mt-3">100 ML <br> <span class="arabic-qty">١٠٠ مل</span></h1>
+                            <h1 class="card-text-2 mt-3">₹ 5000/- <br> <span class="arabic-price">₹ ٥٠٠٠/-</span></h1>
+                        </div>
+                        <img class="card-img mx-auto" src="images/oud-kalakasi-100ml.jpg" alt="Product Image">
+                    </div>
+                </div>
+            </div>
+
+            <div class="mt-4">
+                <div class="product-card">
+                    <div class="card">
+                        <div class="card-body card-product-body text-center lailatul-ziarat-card">
+                            <h5 class="card-title lailat-title">LAILATUL ZIARAT <br> <span class="arabic-lailat">ليلة
+                                    الزيارات</span></h5>
+                            <h1 class="card-text qty-text mt-3">100 ML <br> <span class="arabic-qty">١٠٠ مل</span></h1>
+                            <h1 class="card-text-2 mt-3">₹ 5000/- <br> <span class="arabic-price">₹ ٥٠٠٠/-</span></h1>
+                        </div>
+                        <img class="card-img mx-auto" src="images/lailatul-ziarat-100ml.jpg" alt="Product Image">
+                    </div>
+                </div>
+            </div>
+
+            <div class="mt-4">
+                <div class="product-card">
+                    <div class="card">
+                        <div class="card-body card-product-body text-center shaikha-card">
+                            <h5 class="card-title shaikha-title">SHAIKHA <br> <span
+                                    class="arabic-title arabic-shaikha">شيخة</span> <br> </h5>
+                            <h1 class="card-text qty-text mt-3">100 ML <br> <span class="arabic-qty">١٠٠ مل</span></h1>
+                            <h1 class="card-text-2 mt-3">₹ 5000/- <br> <span class="arabic-price">₹ ٥٠٠٠/-</span></h1>
+                        </div>
+                        <img class="card-img mx-auto" src="images/shaikat-100ml.jpg" alt="Product Image">
                     </div>
                 </div>
             </div>
