--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
             </div>
             <hr>
             <div class="text-center">
-                <p>&copy; 2023 Your Company. All rights reserved. | Powered by <a
+                <p>&copy; 2023 ZIARAT PERFUMES. All rights reserved. <br> Powered by <a
                         href="https://meghanihamza.netlify.app/" class="text-success">WEB WONDERS</a></p>
                 <p>"Unlock the magic of your online presence with Web Wonders! Contact us today for exceptional website
                     creation that goes beyond expectations. Let us help your business thrive. <br> Call us now at
