--- a/index.html
+++ b/index.html
@@ -56,52 +56,73 @@
         <div class="banner-dec">
             <div class="owl-carousel owl-theme">
                 <div class="item">
-                    <!-- <img src="images/banner-img.jpg" class="image-test " alt="" srcset=""-->
                     <div class="bg-img img-fluid">
-                        <h1 class="perfumes-slogan"> <i>“Taste and love are not the servants of the will.
-                                <br> <span class="perfumes-slogan-2"> Love is
-                                    and
-                                    must be free. </span> <br> It rises from the heart like perfume from a flower.”</i>
-                            <h1 class="perfumes-slogan-arrow">Slide To Know More <i class="fa fa-arrow-right"
-                                    aria-hidden="true"></i>
-                            </h1>
-                        </h1>
+                        <div class="row">
+                            <div class="col-8">
+                                <h1 class="perfumes-slogan text-center"> <i>“Taste and love are not the servants of the
+                                        will.
+                                        <br> <span class="perfumes-slogan-2"> Love is
+                                            and
+                                            must be free. </span> <br> It rises from the heart like perfume from a
+                                        flower.”</i>
+                                    <h1 class="perfumes-slogan-arrow text-center">Slide To Know More <i
+                                            class="fa fa-arrow-right" aria-hidden="true"></i>
+                                    </h1>
+                                </h1>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
                 <div class="item">
                     <div class="bg-img-2 img-fluid">
-                        <h1 class="perfumes-slogan-two"> <i> <span class="perfumes-slogan-2-1"></span>"Perfume is the
-                                art that makes memory speak,</span>
-                                <br> an Arabian tale
-                                woven with French elegance, <br> and the mystique of
-                                attar that captures the soul."</i>
-                            <h1 class="perfumes-slogan-arrow-2">Slide To Know More <i class="fa fa-arrow-right"
-                                    aria-hidden="true"></i>
-                            </h1>
-                        </h1>
+                        <div class="row">
+                            <div class="col-8">
+                                <h1 class="perfumes-slogan-two text-center"> <i> <span
+                                            class="perfumes-slogan-2-1"></span>"Perfume
+                                        is the
+                                        art that makes memory speak,</span>
+                                        <br> an Arabian tale
+                                        woven with French elegance, <br> and the mystique of
+                                        attar that captures the soul."</i>
+                                    <h1 class="perfumes-slogan-arrow-2 text-center">Slide To Know More <i
+                                            class="fa fa-arrow-right" aria-hidden="true"></i>
+                                    </h1>
+                                </h1>
+                            </div>
+                        </div>
                     </div>
                 </div>
+
                 <div class="item">
                     <div class="bg-img-3 img-fluid">
-                        <h1 class="perfumes-slogan-three text-center"> <i> "Unleash your senses with the exotic allure
-                                of
-                                Arabian attar & perfumes. <br> <br> From the tantalizing musk to the mesmerizing oud
-                                <br><br> and
-                                the
-                                captivating fragrances of mukhallat & bakhoors, <br> <br> our collection embodies luxury
-                                and
-                                sophistication. <br> <br>
-                                Experience the essence of indulgence and embrace <br> <br> a scent that lingers in the
-                                hearts
-                                of
-                                those who dare to be unforgettable."</i>
-                            <h1 class="perfumes-slogan-arrow-3 text-center">Scroll down <i class="fa fa-arrow-down"
-                                    aria-hidden="true"></i>
-                            </h1>
-                        </h1>
+                        <div class="row">
+                            <div class="col-12">
+                                <h1 class="perfumes-slogan-three text-center"> <i> "Unleash your senses with the exotic
+                                        allure
+                                        of
+                                        Arabian attar & perfumes. <br> <br> From the tantalizing musk to the mesmerizing
+                                        oud
+                                        <br><br> and
+                                        the
+                                        captivating fragrances of mukhallat & bakhoors, <br> <br> our collection
+                                        embodies
+                                        luxury
+                                        and
+                                        sophistication. <br> <br>
+                                        Experience the essence of indulgence and embrace <br> <br> a scent that lingers
+                                        in
+                                        the
+                                        hearts
+                                        of
+                                        those who dare to be unforgettable."</i>
+                                    <h1 class="perfumes-slogan-arrow-3 text-center">Scroll down <i
+                                            class="fa fa-arrow-down" aria-hidden="true"></i>
+                                    </h1>
+                                </h1>
+                            </div>
+                        </div>
                     </div>
-                    <!-- </div> -->
                 </div>
             </div>
     </section>
@@ -109,53 +130,22 @@
     <section class="conatiner-fluid cards-sec">
         <div class="card-img">
             <div class="row g-0">
-                <div class="col-3">
-                    <img src="images/perfumes/amerr al oud s 100 ml.jpeg" class="img-fluid perfume-img-1"
-                        alt="perfume-img">
+                <div class="col-lg-4">
+                    <img src="images/bg-2.jpg" class="img-fluid" alt="perfume-img">
                 </div>
-                <div class="col-3">
-                    <div class="card card-perfume img-fluid">
-                        <div class="card-body ">
-                            <p class="card-text collection-text">OUR PREMIUM COLLECTION OF PERFUMES IN ARABIC AND FRENCH
-                                TONE
-                                <a class="btn btn-outline-dark btn-1" href="#">VIEW COLLECTION...</a>
+                <div class="col-lg-3">
+                    <div class="card rounded-0 text-center card-collection">
+                        <div class="card-body">
+                            <p class="card-text text-collection">"Exquisite scents of Arabian Perfumes, Oud oil, and
+                                enchanting wood."
                             </p>
+                            <a href="#" class="btn btn-outline-dark btn-view-collection text-center">VIEW COLLECTION</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-3">
-                    <img src="images/perfumes/zaina.jpeg" class="img-fluid perfume-img-2" alt="perfume-img">
+                <div class="col-lg-5">
+                    <img src="images/oud-img.jpg" class="img-fluid img-collection-2" alt="perfume-img">
                 </div>
-                <div class="col-3">
-                    <img src="images/perfumes/ziarat blue s 100ml.jpeg" class="img-fluid perfume-img-2"
-                        alt="perfume-img">
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="container-fluid cards-sec-2">
-        <div class="row g-0">
-            <div class="col-3">
-                <img src="images/bakhoors/bakhoor arabian night.jpeg" class="img-fluid bakhoor-image" alt="perfume-img">
-
-            </div>
-            <div class="col-3">
-                <img src="images/bakhoors/bakhoor oud rose.jpeg" class="img-fluid bakhoor-image" alt="perfume-img">
-            </div>
-            <div class="col-3">
-                <div class="card card-perfume-2">
-                    <div class="card-body">
-                        <p class="card-text collection-text-2">
-                            "Shop our exquisite collection of bakhoors and attars for an enchanting sensory experience."
-                            <a class="btn btn-outline-warning btn-2" href="#">VIEW COLLECTION...</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-3">
-                <img src="images/prenium 100ml/amir al oud p 100ml.jpeg" class="img-fluid bakhoor-image"
-                    alt="perfume-img">
             </div>
         </div>
     </section>
