--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link href="https://fonts.cdnfonts.com/css/trajan-pro" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" </head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+</head>
 
 <body>
 
@@ -30,10 +31,10 @@
                     <div class="collapse navbar-collapse" id="navbarText">
                         <ul class="navbar-nav me-auto mb-2 mx-auto mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active mx-2" href="#">Home</a>
+                                <a class="nav-link active mx-2" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-2" href="#">About Us</a>
+                                <a class="nav-link mx-2" href="about-us.html">About Us</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link mx-2" href="#">Products</a>
@@ -339,8 +340,8 @@
                 <div class="col-md-4">
                     <h5>Quick Links:</h5>
                     <ul class="list-unstyled">
-                        <li><a class="text-white" href="#">Home</a></li>
-                        <li><a class="text-white" href="#">About Us</a></li>
+                        <li><a class="text-white" href="index.html">Home</a></li>
+                        <li><a class="text-white" href="about-us.html">About Us</a></li>
                         <li><a class="text-white" href="#">Contact Us</a></li>
                         <li><a class="text-white" href="#">Our Products</a></li>
                     </ul>
