abt-us complete

--- a/about-us.html
+++ b/about-us.html
@@ -88,7 +88,7 @@
                         world, explore our website and embrace luxury.</p>
                     <div class="product mx-5">
                         <div class="d-flex justify-content-between">
-                            <div class="product-name">Arabian Perfumes </div>
+                            <div class="product-name">Arabian Collection </div>
                             <div class="product-name number" id="targetNumber">0</div>
 
                         </div>
@@ -99,7 +99,7 @@
 
                     <div class="product mx-5">
                         <div class="d-flex justify-content-between">
-                            <div class="product-name">Oud Oil / Oud Wood </div>
+                            <div class="product-name">Oud Collection </div>
                             <div class="product-name number-2" id="targetNumber-2">0</div>
 
                         </div>
@@ -124,6 +124,29 @@
         </div>
     </section>
 
+    <section class="container founders">
+        <h1 class="title-abt text-center my-3">FOUNDER</h1>
+        <div class="row  align-items-center">
+            <div class="col-lg-6 text-center">
+                <img src="images/saalem.jpg" class="img-founder  img-fluid" alt="">
+                <h1 class="name-founder my-4">MOHD. SAALEM KHAN <br> <span class="director-text"> (DIRECTOR)
+                    </span></h1>
+            </div>
+            <div class="col-lg-6">
+                <p class="founder-phrase text-center">
+                    <span class="tag-about-us mb-5"><i> <b> WHAT OUR FOUNDER SAYS ?</b> </i> <br> <br></span>
+                    <i> "Welcome to our perfume world, where scents come alive. As
+                        the
+                        founder, I invite you to
+                        explore our
+                        collection of exquisite attars, captivating bakhoors, alluring musk, and enchanting oud.
+                        Experience
+                        the essence of beauty and indulge in fragrances that transport you to a world of aromatic
+                        bliss."</i>
+                </p>
+            </div>
+        </div>
+    </section>
 
 
 
