our products page
remianing our peroduct remian

--- a/about-us.html
+++ b/about-us.html
@@ -35,7 +35,7 @@
                                 <a class="nav-link mx-2" href="about-us.html">About Us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-2" href="#">Products</a>
+                                <a class="nav-link mx-2" href="product.html">Products</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link mx-2" href="#">Contact Us</a>
@@ -148,25 +148,25 @@
         </div>
     </section>
 
-
-
-
     <footer class="footer bg-black text-white">
         <div class="container">
             <div class="row g-0 ">
                 <div class="col-md-4">
                     <h5>Get in touch with us:</h5>
-                    <a href="#" class="text-white mx-1"><i class="fa fa-instagram"></i> Instagram</a>
-                    <a href="#" class="text-white mx-1"><i class="fa fa-whatsapp"></i> WhatsApp</a>
-                    <a href="#" class="text-white mx-1"><i class="fa fa-youtube"></i> YouTube</a>
+                    <a href="https://www.instagram.com/ziarat_for_oud/?hl=en" class="text-white mx-1"><i
+                            class="fa fa-instagram"></i> Instagram</a>
+                    <a href="https://api.whatsapp.com/send?phone=919619000488&msg=hi" class="text-white mx-1"><i
+                            class="fa fa-whatsapp"></i> WhatsApp</a>
+                    <a href="https://www.youtube.com/@ziaratperfumer2482" class="text-white mx-1"><i
+                            class="fa fa-youtube"></i> YouTube</a>
                 </div>
                 <div class="col-md-4">
                     <h5>Quick Links:</h5>
                     <ul class="list-unstyled">
                         <li><a class="text-white" href="index.html">Home</a></li>
                         <li><a class="text-white" href="about-us.html">About Us</a></li>
+                        <li><a class="text-white" href="product.html">Our Products</a></li>
                         <li><a class="text-white" href="#">Contact Us</a></li>
-                        <li><a class="text-white" href="#">Our Products</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4">
@@ -186,7 +186,7 @@
             <hr>
             <div class="text-center">
                 <p>&copy; 2023 ZIARAT PERFUMES. All rights reserved. <br> Powered by <a
-                        href="https://meghanihamza.netlify.app/" class="text-success">WEB WONDERS</a></p>
+                        href="https://meghanihamza.netlify.app/" class="text-warning text-bold">WEB WONDERS</a></p>
                 <p>"Unlock the magic of your online presence with Web Wonders! Contact us today for exceptional website
                     creation that goes beyond expectations. Let us help your business thrive. <br> Call us now at
                     [7977027359] for more information."</p>
