--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                                 <a class="nav-link mx-2" href="about-us.html">About Us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-2" href="#">Products</a>
+                                <a class="nav-link mx-2" href="product.html">Products</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link mx-2" href="#">Contact Us</a>
@@ -132,7 +132,7 @@
         <div class="card-img">
             <div class="row g-0">
                 <div class="col-lg-4">
-                    <img src="images/bg-2.jpg" class="img-fluid" alt="perfume-img">
+                    <img src="images/bg-2.jpg" class="img-fluid bg-2-perfume" alt="perfume-img">
                 </div>
                 <div class="col-lg-3">
                     <div class="card rounded-0 text-center card-collection">
@@ -140,7 +140,8 @@
                             <p class="card-text text-collection">"Exquisite scents of Arabian Perfumes, Oud oil, and
                                 enchanting wood."
                             </p>
-                            <a href="#" class="btn btn-outline-dark btn-view-collection text-center">VIEW COLLECTION</a>
+                            <a href="product.html" class="btn btn-outline-dark btn-view-collection text-center">VIEW
+                                COLLECTION</a>
                         </div>
                     </div>
                 </div>
@@ -169,91 +170,9 @@
     <section class="container arabian-sec">
         <h1 class="text-arabic-brand "><b><i> OUR ARABIC COLLECTION</i></b></h1>
 
-        <!-- <div class="d-lg-flex justify-content-xxl-between text-center arabian-perfumes">
 
-
-            <div class="mt-4 align-content-center">
-                <div class="product-card product-card-1">
-                    <div class="card">
-                        <div class="card-body card-product-body">
-                            <h5 class="card-title title-salamah">DEHNUL OUD SALAMAH <br> <span class="arabic-title">
-                                    دهن
-                                    العود سلامة
-                                </span> <br> </h5>
-                            <h1 class="card-text qty-text mt-3">100 ML <br> <span class="arabic-qty"> ١٠٠ مل </span>
-                            </h1>
-                            <h1 class="card-text-2 mt-3">₹ 5000/- <br> <span class="arabic-price"> ₹ ٥٠٠٠/- </span>
-                            </h1>
-                        </div>
-                    </div>
-                    <img class="card-img" src="images/d,oud-salamat-100ml.jpg" alt="Product Image">
-                </div>
-            </div>
-
-            <div class="">
-                <div class="mt-4">
-                    <div class="product-card">
-                        <div class="card">
-                            <div class="card-body card-product-body oud-kalakasi">
-                                <h5 class="card-title kalakasi-title">OUD KALAKASI <br> <span
-                                        class="arabic-title kalakasi-arabic">
-                                        عود كلكاسي
-                                    </span> <br> </h5>
-                                <h1 class="card-text qty-text mt-3">100 ML <br> <span class="arabic-qty"> ١٠٠ مل
-                                    </span> </h1>
-                                <h1 class="card-text-2 mt-3">₹ 5000/- <br> <span class="arabic-price"> ₹ ٥٠٠٠/- </span>
-                                </h1>
-                            </div>
-                        </div>
-                        <img class="card-img text-center" src="images/oud-kalakasi-100ml.jpg" alt="Product Image">
-                    </div>
-                </div>
-            </div>
-
-            <div class="">
-                <div class="mt-4">
-                    <div class="product-card">
-                        <div class="card">
-                            <div class="card-body card-product-body  lailatul-ziarat-card">
-                                <h5 class="card-title lailat-title">LAILATUL ZIARAT <br>
-                                    <span class="arabic-lailat"> ليلة
-                                        الزيارات
-                                    </span>
-                                </h5>
-                                <h1 class="card-text qty-text mt-3">100 ML <br> <span class="arabic-qty"> ١٠٠ مل
-                                    </span> </h1>
-                                <h1 class="card-text-2 mt-3">₹ 5000/- <br> <span class="arabic-price"> ₹ ٥٠٠٠/- </span>
-                                </h1>
-                            </div>
-                        </div>
-                        <img class="card-img lailat-ziarat-img text-center" src="images/lailatul-ziarat-100ml.jpg"
-                            alt="Product Image">
-                    </div>
-                </div>
-            </div>
-
-            <div class="">
-                <div class="mt-4">
-                    <div class="product-card">
-                        <div class="card">
-                            <div class="card-body card-product-body shaikha-card">
-                                <h5 class="card-title shaikha-title">SHAIKHA <br> <span
-                                        class="arabic-title arabic-shaikha"> شيخة
-                                    </span> <br> </h5>
-                                <h1 class="card-text qty-text mt-3">100 ML <br> <span class="arabic-qty"> ١٠٠ مل
-                                    </span> </h1>
-                                <h1 class="card-text-2 mt-3">₹ 5000/- <br> <span class="arabic-price"> ₹ ٥٠٠٠/- </span>
-                                </h1>
-                            </div>
-                        </div>
-                        <img class="card-img text-center" src="images/shaikat-100ml.jpg" alt="Product Image">
-                    </div>
-                </div>
-            </div>
-        </div> -->
 
         <div class="d-flex justify-content-center justify-content-xxl-between flex-wrap arabian-perfumes">
-
             <div class="mt-4">
                 <div class="product-card product-card-1">
                     <div class="card">
@@ -263,7 +182,7 @@
                             <h1 class="card-text qty-text mt-3">100 ML <br> <span class="arabic-qty">١٠٠ مل</span></h1>
                             <h1 class="card-text-2 mt-3">₹ 5000/- <br> <span class="arabic-price">₹ ٥٠٠٠/-</span></h1>
                         </div>
-                        <img class="card-img mx-auto" src="images/d,oud-salamat-100ml.jpg" alt="Product Image">
+                        <img class="card-img mx-auto" src="images/perfumes/d,oud-salamat-100ml.jpg" alt="Product Image">
                     </div>
                 </div>
             </div>
@@ -277,7 +196,7 @@
                             <h1 class="card-text qty-text mt-3">100 ML <br> <span class="arabic-qty">١٠٠ مل</span></h1>
                             <h1 class="card-text-2 mt-3">₹ 5000/- <br> <span class="arabic-price">₹ ٥٠٠٠/-</span></h1>
                         </div>
-                        <img class="card-img mx-auto" src="images/oud-kalakasi-100ml.jpg" alt="Product Image">
+                        <img class="card-img mx-auto" src="images/perfumes/oud-kalakasi-100ml.jpg" alt="Product Image">
                     </div>
                 </div>
             </div>
@@ -291,7 +210,8 @@
                             <h1 class="card-text qty-text mt-3">100 ML <br> <span class="arabic-qty">١٠٠ مل</span></h1>
                             <h1 class="card-text-2 mt-3">₹ 5000/- <br> <span class="arabic-price">₹ ٥٠٠٠/-</span></h1>
                         </div>
-                        <img class="card-img mx-auto" src="images/lailatul-ziarat-100ml.jpg" alt="Product Image">
+                        <img class="card-img mx-auto" src="images/perfumes/lailatul-ziarat-100ml.jpg"
+                            alt="Product Image">
                     </div>
                 </div>
             </div>
@@ -305,12 +225,13 @@
                             <h1 class="card-text qty-text mt-3">100 ML <br> <span class="arabic-qty">١٠٠ مل</span></h1>
                             <h1 class="card-text-2 mt-3">₹ 5000/- <br> <span class="arabic-price">₹ ٥٠٠٠/-</span></h1>
                         </div>
-                        <img class="card-img mx-auto" src="images/shaikat-100ml.jpg" alt="Product Image">
+                        <img class="card-img mx-auto" src="images/perfumes/shaikat-100ml.jpg" alt="Product Image">
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
 
 
 
@@ -333,17 +254,20 @@
             <div class="row g-0 ">
                 <div class="col-md-4">
                     <h5>Get in touch with us:</h5>
-                    <a href="#" class="text-white mx-1"><i class="fa fa-instagram"></i> Instagram</a>
-                    <a href="#" class="text-white mx-1"><i class="fa fa-whatsapp"></i> WhatsApp</a>
-                    <a href="#" class="text-white mx-1"><i class="fa fa-youtube"></i> YouTube</a>
+                    <a href="https://www.instagram.com/ziarat_for_oud/?hl=en" class="text-white mx-1"><i
+                            class="fa fa-instagram"></i> Instagram</a>
+                    <a href="https://api.whatsapp.com/send?phone=919619000488&msg=hi" class="text-white mx-1"><i
+                            class="fa fa-whatsapp"></i> WhatsApp</a>
+                    <a href="https://www.youtube.com/@ziaratperfumer2482" class="text-white mx-1"><i
+                            class="fa fa-youtube"></i> YouTube</a>
                 </div>
                 <div class="col-md-4">
                     <h5>Quick Links:</h5>
                     <ul class="list-unstyled">
                         <li><a class="text-white" href="index.html">Home</a></li>
                         <li><a class="text-white" href="about-us.html">About Us</a></li>
+                        <li><a class="text-white" href="product.html">Our Products</a></li>
                         <li><a class="text-white" href="#">Contact Us</a></li>
-                        <li><a class="text-white" href="#">Our Products</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4">
@@ -363,14 +287,13 @@
             <hr>
             <div class="text-center">
                 <p>&copy; 2023 ZIARAT PERFUMES. All rights reserved. <br> Powered by <a
-                        href="https://meghanihamza.netlify.app/" class="text-success">WEB WONDERS</a></p>
+                        href="https://meghanihamza.netlify.app/" class="text-warning text-bold">WEB WONDERS</a></p>
                 <p>"Unlock the magic of your online presence with Web Wonders! Contact us today for exceptional website
                     creation that goes beyond expectations. Let us help your business thrive. <br> Call us now at
                     [7977027359] for more information."</p>
             </div>
         </div>
     </footer>
-    </section>
 
 
 
